--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mango Farm</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="style/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -14,37 +14,39 @@
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"/>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  </head>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <body>
 
-      <div class="header">
-        <nav>
-              <a  href="#"><img class="logo" src="MangoLogoWithoutBG.png" alt=""></a>
-                <ul>
+      <header class="col-xl-12">
+        <div class="nav justify-content-between">
+        <a class="nav-link" href="#"><img class="logo" src="Images/MangoLogoWithoutBG.png" alt=""><span class="mangoFarm">MANGO FARM</span></a>
+                <ul class="nav-list pt-4">
                   <li class="nav-item">
-                    <a href="#">Home</a>
+                    <a class="nav-link" href="#">Home</a>
                   </li>
-                  <li>
-                    <a href="#">Products</a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Products</a>
                   </li>
-                  <li>
-                    <a href="#">Bulk Order</a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Bulk Order</a>
                   </li>
-                  <li>
-                    <a href="#">About Us</a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
                   </li>
                 </ul>
-                <a href="" class="login">Login</a>
-                <a href="" class="basket">Basket</a>
+              <div class="lgnBox pt-4">
+                <a class="nav-link" href="" class="login"><i class="fa fa-regular fa-user fa-xl"></i></a>
+                <a class="nav-link" href="" class="basket"><i class="fa fa-light fa-basket-shopping fa-xl"></i></a>
+              </div>
             </div>
-        </nav>
-        </div>
-        <div class="mainImage">
-       <img src="Its_the_season_of_mangoes-removebg-preview.png" alt="">
-        </div>
-      <div class="footer">
+        </header>    
 
-      </div>
+
+
+        
+    
+      <footer>
+
+      </footer>
   </body>
 </html>
