Redesigned the logo for the website, merged the logo with the company's name

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <header class="col-xl-12">
         <div class="nav justify-content-between">
-        <a class="nav-link" href="#"><img class="logo" src="Images/MangoLogoWithoutBG.png" alt=""><span class="mangoFarm">MANGO FARM</span></a>
+        <a class="nav-link" href="#"><span class="mangoFarm">MANG</span><img class="logo" src="Images/MangoLogoWithoutBG.png" alt=""><span class="mangoFarm"> FARM</span></a>
                 <ul class="nav-list pt-4">
                   <li class="nav-item">
                     <a class="nav-link" href="#">Home</a>
@@ -43,7 +43,6 @@
 
 
 
-        
     
       <footer>
 
